sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:22: error: illegal start of simple expression
  }
  ^AlgCocktailSort2:23: error: 'while' expected but '}' found.
} 
^